# antarez-eas-client

./: .gitignore  Cargo.toml  README.md
src/: chain.rs  config.rs  encoding.rs  error.rs  lib.rs  types.rs
src/client/: attestation.rs  mod.rs
