[package]
name = "antarez-eas-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Generic async Rust client for the Ethereum Attestation Service (EAS)"

[dependencies]
alloy = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = ">=1.0, <1.0.217", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "2.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
alloy = { version = "1", features = ["full", "node-bindings"] }
